# FScanpy-package

./: README.md  pyproject.toml
FScanpy/: __init__.py  predictor.py  utils.py
FScanpy/data/: __init__.py
FScanpy/data/test_data/: blastx_example.xlsx  mrna_example.fasta  region_example.xlsx
FScanpy/features/: __init__.py  cnn_input.py  sequence.py
FScanpy/pretrained/: BiLSTM-CNN_all.keras  BiLSTM-CNN_tokenizer.pickle  GradientBoosting_all.pkl  Voting_all.pkl
tutorial/: tutorial.md
